[tool.poetry]
name = "ca-labs"
version = "0.1.0"
description = "draft work for the ca labs"
authors = ["Neerav <patel.nirav100@gmail.com>"]
license = "open"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "1.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
